--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -28,7 +28,7 @@
 				<ul>
 					<li><a href="/join" class="">Join Us</a></li>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
-					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank" class="">Member Login</a></li>
+					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank" class="">Member Help Desk</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
 				</ul>
 			</li>
@@ -73,7 +73,7 @@
 				<ul>
 					<li><a href="/join" class="">Join Us</a></li>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
-					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank"  class="">Member Login</a></li>
+					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank"  class="">Member Help Desk</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
 				</ul>
 			</li>
