--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -24,9 +24,13 @@
 
 	<!-- Open Graph -->
 	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="Open Voice Network | Voice for everyone">
+	<meta property="og:title" content="{{ .Title }} | {{ $.Site.Title }}">
 	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/open-voice-network-branding.jpg">
+	<meta property="og:image" content="{{ .Params.image }}">
+	<meta property="og:description" content="">
+	<!-- Twitter Graph -->
+	<meta name="twitter:card" content="summary_large_image">
+
   {{ template "_internal/google_analytics.html" . }}
   
   {{ if .IsHome }}
