full url for social image

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -26,7 +26,7 @@
 	<meta property="og:type" content="business.business">
 	<meta property="og:title" content="{{ .Title }} | {{ $.Site.Title }}">
 	<meta property="og:url" content="/">
-	<meta property="og:image" content="{{ .Params.image }}">
+	<meta property="og:image" content="{{ if getenv "CONTEXT" }}{{ cond (eq "production" (getenv "CONTEXT")) (getenv "URL") (getenv "DEPLOY_PRIME_URL") }}{{ else }}{{ $.Site.BaseURL }}{{ end }}{{ .Params.image }}">
 	<meta property="og:description" content="">
 	<!-- Twitter Graph -->
 	<meta name="twitter:card" content="summary_large_image">
