--- a/site/layouts/events/list.html
+++ b/site/layouts/events/list.html
@@ -7,9 +7,19 @@
 </div> -->
 
 <div class="w-100 center flex flex-row flex-wrap mb4">
-    {{ range first 6 (where .Pages "Type" "events") }}
-    <div class="w-100 w-third-l w-50-m  flex raise ">                
-            {{ .Render "item"}}
-        </div>
+    {{ $active_events := where (where .Pages "Type" "events") "Params.enabled" "!=" false }}
+    {{ $counter := len $active_events }}
+
+    {{ if eq $counter 0 }}
+    <div class="w-100 w-third-l w-50-m  flex raise "> 
+            {{ partial "coming_soon" }}
+        </div>       
+   {{ end}} 
+
+    {{ range first 6 $active_events}}
+    <div class="w-100 w-third-l w-50-m  flex raise ">
+        {{ .Render "item"}}
+    </div>
     {{ end }}
-</div> 
+    
+</div>
