--- a/site/layouts/events/list.html
+++ b/site/layouts/events/list.html
@@ -1,14 +1,17 @@
-<!-- <div class="w-100 center flex flex-row flex-wrap mb4">
-    {{ range first 4 (where .Pages "Type" "events") }}
-    <div class="w-100 cb w-third-l w-50-m raise flex-row">                
-            {{ .Render "item"}}
-        </div>
-    {{ end }}
-</div> -->
-
 <div class="w-100 center flex flex-row flex-wrap mb4">
-    {{ $active_events := where (where .Pages "Type" "events") "Params.enabled" "!=" false }}
-    {{ $counter := len $active_events }}
+    {{ $items := where .Pages "Type" "events" }}
+    {{ $active_items := where (where $items "Params.archived" false ) "Params.enabled" true}}
+    {{ $counter := 0 }}
+
+    {{ range first 6 $active_items}}
+    {{ $eventEndDate := time .Params.eventEndDate }}
+    {{ if ge $eventEndDate.YearDay now.YearDay }}
+    {{ $counter = add $counter 1 }}    
+    <div class="w-100 w-third-l w-50-m  flex raise ">
+        {{ .Render "item"}}
+    </div>
+    {{ end }}
+    {{ end }}
 
     {{ if eq $counter 0 }}
     <div class="w-100 w-third-l w-50-m  flex raise "> 
@@ -16,10 +19,4 @@
         </div>       
    {{ end}} 
 
-    {{ range first 6 $active_events}}
-    <div class="w-100 w-third-l w-50-m  flex raise ">
-        {{ .Render "item"}}
-    </div>
-    {{ end }}
-    
 </div>
