--- a/site/layouts/events/single.html
+++ b/site/layouts/events/single.html
@@ -74,7 +74,7 @@
           <p>
             <img src="{{.photoUrl}}#left-thumbnail" class="bio-thumbnail db mb1" />
           <h4>{{.name}}</h4>
-          {{.bio}}
+          {{.bio | markdownify}}
           </p>
         </div>
 
