add podcast to Nav Menu

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -43,6 +43,7 @@
 					<li><a href="/white_papers" class="">White Papers</a></li>
 					<li><a href="/webinars" class="">Webinars</a></li>
 					<li><a href="/resources" class="">Messaging</a></li>
+					<li><a href="https://open.spotify.com/show/1hk7DDbaP55aaRlh9QOBl2" target="_blank" class="" >Podcast</a></li>
 					<li><a href="/post" class="">Blog</a></li>
 					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
 					<li><a href="/voice-chats" class="">Video</a></li>
@@ -88,6 +89,7 @@
 					<li><a href="/white_papers" class="">White Papers</a></li>
 					<li><a href="/webinars" class="">Webinars</a></li>
 					<li><a href="/resources" class="">Messaging</a></li>
+					<li><a href="https://open.spotify.com/show/1hk7DDbaP55aaRlh9QOBl2" target="_blank" class="" >Podcast</a></li>
 					<li><a href="/post" class="">Blog</a></li>
 					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
 					<li><a href="/voice-chats" class="">Video</a></li>
