add jobs back to nav bar and fix webinars width

--- a/site/layouts/_default/list-webinars-past.html
+++ b/site/layouts/_default/list-webinars-past.html
@@ -1,4 +1,4 @@
-<div class="w-100 center flex flex-row flex-wrap mb4">
+<div class="w-auto center flex flex-row flex-wrap mb4">
     {{$past_events := where ( where .Pages "Type" "webinars") "Params.enabled" true   }}
     {{ $counter := 0 }}
     {{ range sort $past_events }}
