--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -30,6 +30,7 @@
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
 					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank" class="">Member Help Desk</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
+					<li><a href="/join/positions-to-hire" class="">Positions to Hire</a></li>
 				</ul>
 			</li>
 			<li> <a class="">Initiatives</a>
@@ -76,6 +77,7 @@
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
 					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank"  class="">Member Help Desk</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
+					<li><a href="/join/positions-to-hire" class="">Positions to Hire</a></li>
 				</ul>
 			</li>
 			<li> <a class="">Initiatives</a>
