--- a/site/layouts/webinars/item.html
+++ b/site/layouts/webinars/item.html
@@ -1,4 +1,4 @@
-<div class="mw7 bg-grey-1 raise pa4-s pa2 ma1 vh-auto min-vh-auto">  
+<div class="w-100 bg-grey-1 raise pa4-s pa2 ma1 ma2-l vh-auto min-vh-auto">  
     <!-- <a href="{{ .RelPermalink }}" class="no-underline"> -->
     <!-- check if videoUrl, if videoUrl it will superseed other variables -->
     {{ if ne .Params.videoUrl nil }}
