--- a/site/layouts/webinars/past.html
+++ b/site/layouts/webinars/past.html
@@ -1,6 +1,6 @@
 <div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
     {{ range first 4 (where .Pages "Type" "webinars") }}
-        <div class="ph1-ns w-50-ns flex">                  
+        <div class="ph1-ns w-100 flex">                  
             {{ .Render "item"}}
         </div>
     {{ end }}
