--- a/site/layouts/partials/coming_soon.html
+++ b/site/layouts/partials/coming_soon.html
@@ -1,4 +1,4 @@
-<div class="mw7  raise pa4-s pa2 ma1 vh-auto min-vh-auto">  
+<div class="mw7  raise pa4-s pa2 ma1 ma2-l vh-auto min-vh-auto">  
    <img src="/img/coming-soon-defaults.png" alt="" 
    class="w-100 event-logo db mb1 "> 
 </div>
