--- a/site/layouts/_default/apply-form.html
+++ b/site/layouts/_default/apply-form.html
@@ -12,13 +12,9 @@
     <div class="mv2">Email <input type="text" name="Email" value="" placeholder="Email" class="" /></div>
 
     <div class="mv2">Which position are you applying for? 
-      <select name="position_to_hire">
-        <option value="">- select -</option>
-        <option value="Programmer / Software Developer">Programmer / Software Developer</option>
-        <option value="Data Security Specialist">Data Security Specialist</option>
-        <option value="System Architect / Development Engineer">System Architect / Development Engineer</option>
-      </select>
-      
+      <select name="position_to_hire">     
+        <option value="Programmer / Software Developer">Senior Advisor, Technical Committee</option>     
+      </select>          
     </div>
     <div class="mv2">Please upload an updated resume detailing your experience and expertise. <br />
     <input type="file" name="resume_cv" accept=".pdf,.doc,.docx,.txt" />
