--- a/src/css/imports/_buttons.css
+++ b/src/css/imports/_buttons.css
@@ -13,6 +13,21 @@
   transition: var(--hover-transition);
 }
 
+.btnSecondary {
+  display: inline-block;
+  padding: 12px 16px 10px;
+  font-size: var(--spacing-medium);
+  line-height: 1.25;
+  background-color: var(--secondary);
+  border-radius: var(--border-radius);
+  text-decoration: none;
+  font-weight: var(--bold-font-weight);
+  color: var(--white) !important;
+  text-align: center;
+  box-shadow: inset 0 0 0 2px var(--secondary);
+  transition: var(--hover-transition);
+}
+
 /** join link buttons **/
 .btn-link{
   display: block;
