--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -29,6 +29,7 @@
 					<li><a href="/join" class="">Join Us</a></li>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
 					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank" class="">Member Help Desk</a></li>
+					<li><a href="/crowd_funding" class="">Crowdfunding</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
 					<li><a href="/join/positions-to-hire" class="">Positions to Hire</a></li>
 				</ul>
@@ -76,6 +77,7 @@
 					<li><a href="/join" class="">Join Us</a></li>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
 					<li><a href="https://jira.linuxfoundation.org/plugins/servlet/desk/portal/23?project=openvoicenetwork" target="_blank"  class="">Member Help Desk</a></li>
+					<li><a href="/crowd_funding" class="">Crowdfunding</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
 					<li><a href="/join/positions-to-hire" class="">Positions to Hire</a></li>
 				</ul>
