fix call to action url prop

--- a/site/layouts/partials/media-block.html
+++ b/site/layouts/partials/media-block.html
@@ -8,7 +8,7 @@
     {{ if .textHTML }}<div>{{.textHTML | safeHTML | markdownify }}</div>{{ end }}   
     {{ if .callToActionUrl }}
       <div class="w-100-ns tc pa2 ma1">
-      <a href="{.callToActionUrl}}" target="_blank" rel="noopener" class="btnSecondary raise">   
+      <a href="{{.callToActionUrl}}" target="_blank" rel="noopener" class="btnSecondary raise">   
         {{.callToActionText}}
       </a>
      </div>
