--- a/src/css/imports/_cms.css
+++ b/src/css/imports/_cms.css
@@ -99,4 +99,20 @@
       margin: 0;
     }
   }
+
+    /* Blockquotes with cite */
+	& blockquote {
+		background-color: var(--grey-1);
+		display: block;
+		border-radius: var(--border-radius);
+		padding: var(--spacing-medium);
+		color: var(--primary);
+		font-weight: 700;
+		font-size: 1.25rem;;
+		margin-bottom: var(--spacing-medium);
+		& cite {			
+			display: block;
+			font-size: 0.75em;
+		}
+	  }
 }
