--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -2,13 +2,13 @@
   <div class="mw7 center ph3">
     <div class="db mb3">
       <div class="mw7 relative bg-fix-primary mb3">
-        <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary">
+        <h1 class="f2 ph2  f1-l b di lh-title mb3 white mw6 bg-transparent">
           {{.title}}
         </h1>
       </div>
       <div class="mw7 relative bg-fix-primary">
         {{ if .subtitle }}
-        <p class="b f4 di lh-title mb3 white mw6 bg-primary">
+        <p class="b f4 di lh-title mb3 white mw6 bg-transparent">
           {{.subtitle}}
         </p>
         {{ end }}
