--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -2,6 +2,7 @@
 	/* Colors */
 	--primary: rgba(1, 81, 256, 1);
 	--highlight: rgba(254, 213, 198, 1);
+	--error: rgb(245, 4, 4);
 	--white: rgba(255, 255, 255, 1);
 	--off-white: rgba(255, 253, 252, 1);
 	--grey-1: rgba(245, 243, 242, 1);
