--- a/site/layouts/_default/become-a-friend.html
+++ b/site/layouts/_default/become-a-friend.html
@@ -48,7 +48,7 @@
                 engine </div>
               <div class="fl w-100 w-50-ns mb2">
                 <div>
-                  <input class="mr2" type="checkbox" id="conference_checkbox" name="hear_about">Conference or Event
+                  <input class="mr2" type="checkbox" id="conference_checkbox" name="hear_about" value="conference">Conference or Event
                 </div>
                 <div class="pb2"><textarea rows="1" class="w-90 mh2" id="conference_value" name="conference_value"
                     style="display: none;"></textarea>
@@ -56,7 +56,7 @@
               </div>
               <div class="fl w-100 w-50-ns mb2">
                 <div>
-                  <input class="mr2" type="checkbox" id="hear_about_other_checkbox" name="hear_about">Other
+                  <input class="mr2" type="checkbox" id="hear_about_other_checkbox" value="other" name="hear_about">Other
                 </div>
                 <div class="pb2"><textarea rows="1" class="w-90 mh2" id="hear_about_other_value"
                     name="Community Interest Value" style="display: none;"></textarea>
@@ -64,7 +64,7 @@
               </div>
               <div class="fl w-100 w-50-ns mb2">
                 <div>
-                  <input class="mr2" type="checkbox" id="referral_checkbox" name="hear_about">Peer referral
+                  <input class="mr2" type="checkbox" id="referral_checkbox" value="referral" name="hear_about">Peer referral
                 </div>
                 <div class="pb2 "><textarea rows="1" class="w-90 mh2" id="referral_value" name="referral_value"
                     style="display: none;"></textarea>
