--- a/site/layouts/_default/become-a-friend.html
+++ b/site/layouts/_default/become-a-friend.html
@@ -37,7 +37,7 @@
         <div class="mw7">
           <fieldset class="mw7">
             <legend class="mw7 fw7 mb2">How did you hear about the Friends of the Open Voice Network program?</legend>
-            <input type="number" value="0" name="hear_about_validator" min="0" id="hear_about_validator" class="dn" />
+            <input type="number" value="0" name="hear_about_total_count" min="0" id="hear_about_validator" class="dn" />
             <div class="ph2 mw6 cf" id="hear_about_container">
               <div class="fl w-100 w-50-ns mb2">
                 <input class="mr2" type="checkbox" name="hear_about" value="blog">Blog or Publication
@@ -76,7 +76,7 @@
         <div class="mw7">
           <fieldset class="mw7">
             <legend class="mw7 fw7 mb2">Please choose up to two OVON Work Groups and Communities of interest:</legend>
-            <input type="number" value="0" name="interest_validator" id="interest_validator" class="dn" />
+            <input type="number" value="0" name="interest_total_count" id="interest_validator" class="dn" />
             <div class="ph2 mw6 cf" id="interest_container">
               <div class="fl w-100 w-50-ns mb2">
                 <input class="mr2" type="checkbox" name="interest" value="Architecture Work Group">Architecture Work
