add telephone country code and updated some field values

--- a/src/css/imports/_forms.css
+++ b/src/css/imports/_forms.css
@@ -14,9 +14,10 @@ fieldset
   padding: 0;
 }
 
-input, textarea {
+input, select, textarea {
   background-color: var(--grey-2);
   border-radius: var(--border-radius);
+  border-color: var(--black);
   padding: 12px 16px 10px;
   font-size: var(--spacing-medium);
   line-height: 1.25;
