fix style issues on chrome and edge

--- a/site/layouts/_default/become-a-friend.html
+++ b/site/layouts/_default/become-a-friend.html
@@ -31,7 +31,7 @@
           <p class="mw7 fw7 mb2">Contact Number:
             <!-- country codes (ISO 3166) and Dial codes. -->
           <div class="fl w-40">
-            <select class="w-100 bg-off-white ba pa2 mb2 db" name="country_code" required id="">
+            <select class="input-reset w-100 bg-off-white pa2 mb2 db" name="country_code" required id="">
             <option data-countryCode="US" value="1" selected>USA (+1)</option>
             <option data-countryCode="GB" value="44">UK (+44)</option>
             <option data-countryCode="DZ" value="213">Algeria (+213)</option>
