--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -2,7 +2,7 @@
 <div class="mb4">
   <h4 class="f3 b lh-title mb3 tc">Drop us a line below</h4>
 
-  <form action="" name="contact" netlify>
+  <form action="" name="contact" netlify data-netlify-recaptcha="true">
     <div class="flex-l mhn1-l">
       <!-- Name -->
       <div class="ph1-l w-50-l">
@@ -36,6 +36,8 @@
       <textarea id="message" name="message" placeholder="Your message" rows="8" cols="80" class="w-100"></textarea>
       <label for="message">Your message</label>
     </fieldset>
+
+    <div data-netlify-recaptcha="true"></div>
     <!-- Button -->
     <div class="tc">
       <button type="submit" class="btn w-100 w-auto-ns raise">Submit</button>
