--- a/site/layouts/events/item.html
+++ b/site/layouts/events/item.html
@@ -2,7 +2,7 @@
   <div onclick="location.href='{{ .RelPermalink }}'" class="mw7 bg-grey-1 raise pa4-s pa2 ma1 vh-auto min-vh-auto">  
     <div>     
     <img src="{{ .Params.listItemImage }}" alt="" 
-    class="w-100 event-logo db mb1 " >`
+    class="w-100 event-logo db mb1" >
     </div>
     <div class="tc pb4">
         <p>{{ .Params.listItemTitle }}</p>
