--- a/site/layouts/webinars/item.html
+++ b/site/layouts/webinars/item.html
@@ -1,14 +1,22 @@
-<div class="w-100 bg-grey-1 raise pa4-s pa2 ma1 ma2-l vh-auto min-vh-auto">  
+<div class="w-100 bg-grey-1 raise pa4-s pa2 ma1 ma2-l vh-auto min-vh-auto">
     <!-- <a href="{{ .RelPermalink }}" class="no-underline"> -->
-    <!-- check if videoUrl, if videoUrl it will superseed other variables -->
+    <!-- check if videoUrl, if videoUrl it will superseed other variables -->  
     {{ if ne .Params.videoUrl nil }}
+    <div class="tc pb4">
     {{ partial "video_player" (dict "videoUrl" .Params.videoUrl "title" .Params.title) }}
+    </div>   
+    <div class="tc center fixed bottom-0 pb2 w-100 " style="align-items: center;justify-content: center;">
+        <div class="static w-100">
+            <p class="red"> {{ time.Format "2 January, 2006" .Params.endDate}}</p>
+        </div>
+    </div>
     {{ else }}
-    
+
     <img src="{{ .Params.imageUrl }}" alt="" class="w-100 event-logo db mb1 ">
     {{if ne .Params.callToActionEvent nil }}
     <div class="tc">
         <p>{{ .Params.title}}</p>
+        <p class="red"> {{ time.Format "2 January, 2006" .Params.endDate}}</p>
         <a href="/events/{{.Params.callToActionEvent}}" target="_blank" rel="noopener"
             class="btn raise">{{.Params.callToAction}}</a>
     </div>
