correct forms and layouts

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,10 +2,9 @@
 
 	<div class="mw7 center pt3">
 
-		<div class="measure-narrow center mb4">
-
-			<img src="/img/logo-white.svg" alt="Open Voice Network logo" class="db w5 center mb4 br0">
-			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
+		<div class="mw6 mb4">
+			<img src="/img/logo-white.svg" alt="Open Voice Network logo" class="db w5 mb4 br0">
+			<p class="f3 lh-title light-gray b mb2">Newsletter subscribe</p>
 			<p>Get news from us in your inbox on a regular basis. Be the first to learn the latest with the Open Voice Network.</p>
 
 			{{ partial "newsletter-form" . }}
