--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -1,21 +1,16 @@
-<div class="bg-grey-1 pv4">
-	<div class="ph3 mw7 center">
-
-		<div class="flex-l mhn2-l">
-			<div class="w-40-l ph2-l">
+<div class="mw9 bg-grey-1 pv4 center">
+	<div class="mw7 ph3 center">
+		<div class="w-100 cms mhn2-l center">
+			<div class="w-40-l ph2-l center">
 				<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
-
 				<p>{{.text}}</p>
 			</div>
-
-			<div class="w-60-l ph2-l">
+			<div class="w-50-l ph2-l center">
 				<img src="img/ovn-open-voice-network-join-assistance_optimized.jpg" alt="" class="mb3">
+				<div class="tc">
+					<a href="{{.buttonLink}}" class="btn raise">{{.buttonText}}</a>
+				</div>
 			</div>
 		</div>
-
-		<div class="tc">
-			<a href="{{.buttonLink}}" class="btn raise">{{.buttonText}}</a>
-		</div>
-
 	</div>
 </div>
