--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -23,7 +23,7 @@
 <div class="bg-grey-1 pv4">
   <div class="mhn1-l ph3 center mw7">
     <h2 class="f2 b lh-title mb2">{{.Params.social.heading}}</h2>
-    <div class="" style="margin:0 auto; width: 260px;">
+    <div class="" >
     {{ partial "social-links" . }}
     </div>
   </div>
