add new menu items

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -40,11 +40,12 @@
 					<li><a href="/industries" class="">Industries</a></li>
 				</ul>
 			</li>
-			<li><a class="">Resources</a>
+			<li><a class="">Messaging</a>
 				<ul>
 					<li><a href="/white_papers" class="">White Papers</a></li>
 					<li><a href="/webinars" class="">Webinars</a></li>
-					<li><a href="/resources" class="">Messaging</a></li>
+					<li><a href="/resources" class="">Resources</a></li>
+					<li><a href="/publications" class="">Publications</a></li>
 					<li><a href="https://open.spotify.com/show/1hk7DDbaP55aaRlh9QOBl2" target="_blank" class="" >Podcast</a></li>
 					<li><a href="/post" class="">Blog</a></li>
 					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
@@ -56,6 +57,7 @@
 				<ul>
 					<li><a href="/events" class="">Conferences and Speaking</a></li>
 					<li><a href="/calendar" class="">Meeting Calendar</a></li>
+					<li><a href="https://openvoicenetwork.org/events/2022-interoperability-workshop/" class="">2022 Interoperability Workshop</a></li>				
 				</ul>
 			</li>
 			<li><a href="/contact" class="">Contact</a></li>
@@ -88,11 +90,12 @@
 					<li><a href="/industries" class="">Industries</a></li>
 				</ul>
 			</li>
-			<li><a class="">Resources</a>
+			<li><a class="">Messaging</a>
 				<ul>
 					<li><a href="/white_papers" class="">White Papers</a></li>
 					<li><a href="/webinars" class="">Webinars</a></li>
-					<li><a href="/resources" class="">Messaging</a></li>
+					<li><a href="/resources" class="">Resources</a></li>
+					<li><a href="/publications" class="">Publications</a></li>
 					<li><a href="https://open.spotify.com/show/1hk7DDbaP55aaRlh9QOBl2" target="_blank" class="" >Podcast</a></li>
 					<li><a href="/post" class="">Blog</a></li>
 					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
@@ -104,6 +107,7 @@
 				<ul>
 					<li><a href="/events" class="">Conferences and Speaking</a></li>
 					<li><a href="/calendar" class="">Meeting Calendar</a></li>
+					<li><a href="https://openvoicenetwork.org/events/2022-interoperability-workshop/" class="">2022 Interoperability Workshop</a></li>
 				</ul>
 			</li>
 			<li><a href="/contact" class="">Contact</a></li>
